--- a/src/weather.css
+++ b/src/weather.css
@@ -10,6 +10,10 @@ ul {
   margin: 0;
 }
 
+li {
+  text-decoration: none;
+}
+
 .container-md {
   background-image: linear-gradient(
     to top,
@@ -21,6 +25,7 @@ ul {
   font-family: sans-serif;
   font-weight: 400;
   color: #4e4e4e;
+  margin: 25px 10px 25px 10px;
   margin: 25px auto;
   min-width: 300px;
 }
@@ -28,14 +33,20 @@ ul {
 .container-md h1 {
   font-weight: 600;
   text-transform: uppercase;
+  padding: 25px;
 }
 
 #temperature {
-  font-size: 50px;
+  font-size: 4em;
 }
 
 .container-md h4 {
+  font-size: 1.5em;
   text-transform: capitalize;
+}
+
+.container-md h3 {
+  padding: 10px;
 }
 
 .date {
@@ -58,5 +69,4 @@ ul {
   margin: 25px;
 }
 
-@media (min-width: 576px) {
-}
+@media (min-width: 576px);
