--- a/src/weather.css
+++ b/src/weather.css
@@ -14,43 +14,58 @@ li {
   text-decoration: none;
 }
 
+hr {
+  background-color: #f1f1f1;
+  opacity: 0.4;
+}
+
+.card-block {
+  background-color: rgba(245, 245, 245, 0.02);
+  border-radius: 10px;
+}
+
+.card-footer {
+  background-color: rgba(245, 245, 245, 0.4);
+}
+
 .container-md {
-  background-image: linear-gradient(
-    to top,
-    #dad4ec 0%,
-    #dad4ec 1%,
-    #f3e7e9 100%
-  );
+  background-image: linear-gradient(180deg, #243949 0, #517fa4);
   text-align: center;
-  font-family: sans-serif;
-  font-weight: 400;
-  color: #4e4e4e;
-  margin: 25px 10px 25px 10px;
+  font-family: Nunito Sans, sans-serif;
+  font-weight: 200;
+  font-size: 10px;
+  color: #f1f1f1;
   margin: 25px auto;
-  min-width: 300px;
+  min-width: 350px;
+  max-width: 350px;
+  box-shadow: 0 7px 7px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
 }
 
 .container-md h1 {
   font-weight: 600;
   text-transform: uppercase;
-  padding: 25px;
+  padding: 14px;
 }
 
 #temperature {
-  font-size: 4em;
+  font-size: 10em;
+  font-weight: 500;
 }
 
 .container-md h4 {
-  font-size: 1.5em;
+  font-size: 2em;
   text-transform: capitalize;
+  font-weight: 200;
 }
 
 .container-md h3 {
-  padding: 10px;
+  padding-bottom: 25px;
 }
 
 .date {
-  color: #949494;
+  color: #cccccc;
+  font-size: 1.5em;
 }
 
 .form-control {
