--- a/src/weather.css
+++ b/src/weather.css
@@ -29,7 +29,7 @@ hr {
 }
 
 .container-md {
-  background-image: linear-gradient(180deg, #243949 0, #517fa4);
+  background-image: linear-gradient(180deg, #243949 0, #779dbd);
   text-align: center;
   font-family: Nunito Sans, sans-serif;
   font-weight: 200;
