--- a/src/weather.css
+++ b/src/weather.css
@@ -1,6 +1,6 @@
 li {
   font-size: 14px;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 25px;
   text-align: left;
   list-style: none;
@@ -20,19 +20,15 @@ hr {
 }
 
 .card-block {
-  background-image: linear-gradient(180deg, #243949 0, #58738a);
+  background-color: 0;
   border-radius: 10px;
 }
 
-.card-footer {
-  background-color: rgba(245, 245, 245, 0.4);
-}
-
 .container-md {
-  background-color: #243949;
+  background-image: linear-gradient(180deg, #243949 0, #517fa4);
   text-align: center;
   font-family: Nunito Sans, sans-serif;
-  font-weight: 200;
+  font-weight: 400;
   font-size: 10px;
   color: #f1f1f1;
   margin: 25px auto;
@@ -76,4 +72,13 @@ hr {
 
 .btn {
   margin: 25px;
+}
+
+btn:hover {
+  color: #243949;
+}
+
+.degreeIcon {
+  font-weight: 100;
+  font-size: 1em;
 }
