--- a/src/weather.css
+++ b/src/weather.css
@@ -52,10 +52,11 @@ hr {
 .container-md h4 {
   font-size: 2em;
   text-transform: capitalize;
-  font-weight: 200;
+  font-weight: 400;
 }
 
 .container-md h3 {
+  font-size: 25px;
   padding-bottom: 25px;
 }
 
