--- a/src/weather.css
+++ b/src/weather.css
@@ -90,3 +90,27 @@ btn:hover {
   font-weight: 100;
   font-size: 1em;
 }
+
+@media only screen and (max-width: 375px) {
+  .container-md {
+    max-height: 600px;
+    min-height: 600px;
+    width: 80%;
+  }
+  .container-md h3 {
+    font-size: 25px;
+    padding-top: 10px;
+  }
+  .card-block {
+    background-color: 0;
+    border-radius: 10px;
+    max-height: 250px;
+    min-height: 250px;
+  }
+  ul {
+    max-height: 10px;
+  }
+  #temperature {
+    font-size: 8em;
+  }
+}
