--- a/src/weather.css
+++ b/src/weather.css
@@ -106,6 +106,7 @@ btn:hover {
     border-radius: 10px;
     max-height: 250px;
     min-height: 250px;
+    margin-top: 5px;
   }
   ul {
     max-height: 10px;
