--- a/src/weather.css
+++ b/src/weather.css
@@ -28,7 +28,7 @@ hr {
 }
 
 .container-md {
-  background-image: linear-gradient(180deg, #243949 0, rgba(65, 65, 65, 0));
+  background-image: linear-gradient(180deg, #18364d 0, rgba(65, 65, 65, 0));
   text-align: center;
   font-family: Nunito Sans, sans-serif;
   font-weight: 400;
