--- a/src/weather.css
+++ b/src/weather.css
@@ -111,3 +111,10 @@ btn:hover {
     font-size: 8em;
   }
 }
+.weather-container {
+  background: transparent;
+  }
+
+.sc-bwzfXH fQuOeK {
+  background: transparent;
+  }
