icon background update css

--- a/src/weather.css
+++ b/src/weather.css
@@ -82,6 +82,10 @@ btn:hover {
   color: #243949;
 }
 
+.fQuOeK {
+  background: none;
+}
+
 #temperature {
   font-size: 10em;
   font-weight: 500;
@@ -113,8 +117,8 @@ btn:hover {
 }
 .weather-container {
   background: transparent;
-  }
+}
 
 .sc-bwzfXH fQuOeK {
   background: transparent;
-  }
+}
